[package]
name = "ctrlcc"
version = "0.1.0"
edition = "2021"

[dependencies]
rdev     = "0.5"     # listener global de teclado/mouse (mac / x11 / wayland)
arboard  = "2"       # clipboard cross-platform
regex    = "1"
chrono   = "0.4"
dirs     = "5"
once_cell = "1" 
anyhow   = "1.0" 
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8" 
clap = { version = "4.0", features = ["derive"] } 